--- a/lfc/src/App.css
+++ b/lfc/src/App.css
@@ -16,12 +16,12 @@ div .navbar{
   padding: 0 !important;
 }
 .navbar {
-  height: 7vh;
   display: flex;
   justify-content: space-around;
-  background-color: #333;
+  border-radius: 1rem;
+  /* background-color: #eee; */
 }
-.navbar a{
+.navba a{
   margin: auto;
   width: 25%;
   text-align: center;
@@ -33,7 +33,7 @@ div .navbar{
   height: 100%;
   text-decoration: none;
   color: #fff;
-  background-color: #222;
+  background-color: #eee;
   /* padding: 10px 20px; */
 }
 .navbar a:hover{
